tests/snapshots/test__function.snap
---
source: tests/test.rs
expression: processed_content
---
function preamble
```rust
#use std::fmt;
fn free_function() {
    println!("Hello, world! \\{");
}
```
after function preamble
