tests/snapshots/test__struct.snap
---
source: tests/test.rs
expression: processed_content
---
struct preamble
```rust
#use std::fmt;
struct TestStruct {
    name: String,
    value: i32,
}
```
after struct preamble
