tests/snapshots/test__trait_impl.snap
---
source: tests/test.rs
expression: processed_content
---
trait impl preamble
```rust
#use std::fmt;
#struct TestStruct {
#    name: String,
#    value: i32,
#}
#trait TestTrait {
#    fn test_method(&self) -> String;
#    fn default_method(&self) -> i32 {
#        42
#    }
#}
impl TestTrait for TestStruct {
    fn test_method(&self) -> String {
        format!("TestStruct: {}", self.name)
    }
}
```
after trait impl preamble
